fihex overflow issue

--- a/DJANGO_PROJECT/static/css/style.css
+++ b/DJANGO_PROJECT/static/css/style.css
@@ -3036,6 +3036,7 @@ a:hover {
 
 body {
     position: relative;
+    overflow: hidden;
 }
 
 .bg {
